# tee-sniper

./: .dockerignore  .env.example  CLAUDE.md  DOCKER_K8S_PLAN.md  DOCKER_PLAN.md  Dockerfile  LICENSE  README.md  TESTING_PLAN.md  TODOS.md  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum  run-teesniper.sh
.github/: dependabot.yml
.github/workflows/: api-build.yml  book-tee-time-manual.yml  book-tee-time.yml  build.yml  docker.yml  release.yml
api/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  manual_test.sh  pyproject.toml  requirements.txt
api/app/: __init__.py  config.py  dependencies.py  main.py
api/app/models/: __init__.py  domain.py  requests.py  responses.py
api/app/routers/: __init__.py  booking.py
api/app/services/: __init__.py  booking_client.py  encryption.py  session_manager.py
api/app/utils/: html_parser.py  user_agents.py
api/tests/: __init__.py  conftest.py  test_booking_client.py  test_booking_routes.py  test_config.py  test_dependencies.py  test_encryption.py  test_health.py  test_html_parser.py  test_session_integration.py  test_session_manager.py
api/tests/fixtures/: availability_blocked.html  availability_empty.html  availability_with_slots.html  booking_failure.html  booking_success.html  login_success.html
argocd/: application.yaml  secrets-example.yaml
cmd/tee-sniper/: main.go  main_test.go
docs/: API_MIGRATION_PLAN.md  DOCKER_PLAN.md  PHASE2_REDIS_PLAN.md
helm/tee-sniper/: .helmignore  Chart.yaml  README.md  values-dryrun.yaml  values.yaml  (+1 more)
testdata/: availability_blocked.html  login_failure.html
(+22 files in other folders)
